=====================================================
VERSION 0.0.4

In progress...

* Nice mountain tiles from anon
+ More life in Solar system - added space station and humanity spaceships with dummy dialogs
* Alien starships will no longer spawn in quest and unique locations, like Solar system.
+ Screen with detailed calculation of research progress upon returning to Earth
+ Added private message system and screen

======================================================
VERSION 0.0.3

11.02.2013

+ Research projects can now show report screen when finished
+ Research projects can now spawn new projects when they are finished
* Refactored world generation, split into multiple classes
+ Added universal json resource manager for loading game entity descriptions.
+ Added content - some new researches, dialogs, reports and artifacts

======================================================
VERSION 0.0.2

30.01.2013

+ World generation progress is now shown when 'New Game' is pressed
* World generation is now multi-threaded
+ NPC ships will now return fire if attacked
+ Player ship can now be destroyed in combat
+ Added gameover message screen with image
+ Added ability to repair hull for resources
+ Added Help screen

======================================================
VERSION 0.0.1

23.01.2013

First version with minimum set of required features:

+ Main menu and save/load functionality
+ Launching a new game, generating random galaxy
+ Travelling over global map, entering star system
+ Landing on planets. Exploring. Collecting resources, fighting with animals
+ 2 dummy alien races, their starships, homeworlds and dialogs
+ Initial space combat
+ Research system and a couple of basic research projects
+ Player progress evaluation at Earth, gameover if progress is not sufficient